# Build-Your-Own-Audio-Processing-Package-Using-Poetry

./: README.md
notebooks/: part1_audio.ipynb  part2_build_functions.ipynb
notebooks/reference_notebooks/: example_functions.ipynb
pyladies_acoustics/: pyproject.toml
pyladies_acoustics/notebooks/: example_package_functionality.ipynb
pyladies_acoustics/pyladies_acoustics/: __init__.py  audio_fun.py
pyladies_acoustics/tests/: test_pyladies_acoustics.py
