[tool.poetry]
name = "pyladies_acoustics"
version = "0.1.0"
description = "afb"
authors = ["a-n-rose <rose.aislyn.noelle@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
